--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "videojs-hls-stream-selector": "^0.1.0"
   },
   "engines": {
-    "node": "8.9.x"
+    "node": "v12.2.0",
+    "npm": "7.5.4"
   }
 }
